@@ -17,41 +17,36 @@
  */
 package org.apache.hedwig.server.delivery;
 
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ConcurrentLinkedQueue;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicBoolean;
-
-import org.junit.Test;
-
-import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
+import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import org.apache.hedwig.exceptions.PubSubException;
+import org.apache.hedwig.filter.PipelineFilter;
+import org.apache.hedwig.protocol.PubSubProtocol.Message;
+import org.apache.hedwig.protocol.PubSubProtocol.MessageSeqId;
+import org.apache.hedwig.protocol.PubSubProtocol.PubSubResponse;
+import org.apache.hedwig.protocol.PubSubProtocol.SubscriptionPreferences;
+import org.apache.hedwig.server.common.ServerConfiguration;
+import org.apache.hedwig.server.persistence.PersistRequest;
+import org.apache.hedwig.server.persistence.PersistenceManager;
+import org.apache.hedwig.server.persistence.StubPersistenceManager;
+import org.apache.hedwig.server.subscriptions.AllToAllTopologyFilter;
+import org.apache.hedwig.util.Callback;
+import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.protobuf.ByteString;
-
-import org.apache.hedwig.client.api.Subscriber;
-import org.apache.hedwig.protocol.PubSubProtocol.Message;
-import org.apache.hedwig.protocol.PubSubProtocol.MessageSeqId;
-import org.apache.hedwig.protocol.PubSubProtocol.SubscriptionPreferences;
-import org.apache.hedwig.filter.PipelineFilter;
-import org.apache.hedwig.server.subscriptions.AllToAllTopologyFilter;
-
-import org.apache.hedwig.protocol.PubSubProtocol.PubSubResponse;
-import org.apache.hedwig.exceptions.PubSubException;
-
-import org.apache.hedwig.server.common.ServerConfiguration;
-import org.apache.hedwig.util.Callback;
-import org.apache.hedwig.server.persistence.StubPersistenceManager;
-import org.apache.hedwig.server.persistence.PersistenceManager;
-import org.apache.hedwig.server.persistence.PersistRequest;
 
 public class TestFIFODeliveryManager {
     static Logger logger = LoggerFactory.getLogger(TestFIFODeliveryManager.class);
@@ -133,7 +128,7 @@ public class TestFIFODeliveryManager {
         filter.addLast(new AllToAllTopologyFilter());
         filter.initialize(conf.getConf());
         filter.setSubscriptionPreferences(topic, subscriber, prefs);
-        MessageSeqId startId = MessageSeqId.newBuilder().build();
+        MessageSeqId startId = MessageSeqId.newBuilder().setLocalComponent(1).build();
 
         CountDownLatch l = new CountDownLatch(1);
         Message m = Message.newBuilder().setBody(ByteString.copyFromUtf8(String.valueOf(1))).build();
@@ -194,4 +189,109 @@ public class TestFIFODeliveryManager {
         r = dep.getNextResponse();
         assertNull("There should only be 2 responses", r);
     }
+
+    static class ExecutorDeliveryEndPoint implements DeliveryEndPoint {
+        ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
+        AtomicInteger numDelivered = new AtomicInteger();
+        final DeliveryManager dm;
+
+        ExecutorDeliveryEndPoint(DeliveryManager dm) {
+            this.dm = dm;
+        }
+
+        public void send(final PubSubResponse response, final DeliveryCallback callback) {
+            executor.submit(new Runnable() {
+                    public void run() {
+                        if (response.hasMessage()) {
+                            MessageSeqId msgid = response.getMessage().getMsgId();
+                            if ((msgid.getLocalComponent() % 2) == 1) {
+                                dm.messageConsumed(response.getTopic(),
+                                        response.getSubscriberId(),
+                                        response.getMessage().getMsgId());
+                            } else {
+                                executor.schedule(new Runnable() {
+                                        public void run() {
+                                            dm.messageConsumed(response.getTopic(),
+                                                    response.getSubscriberId(),
+                                                    response.getMessage().getMsgId());
+                                        }
+                                    }, 1, TimeUnit.SECONDS);
+                            }
+                        }
+                        numDelivered.incrementAndGet();
+                        callback.sendingFinished();
+                    }
+                });
+        }
+
+        public void close() {
+            executor.shutdown();
+        }
+
+        int getNumDelivered() {
+            return numDelivered.get();
+        }
+    }
+
+    /**
+     * Test throttle race issue cause by messageConsumed and doDeliverNextMessage
+     * {@link https://issues.apache.org/jira/browse/BOOKKEEPER-503}
+     */
+    @Test
+    public void testFIFODeliveryThrottlingRace() throws Exception {
+        final int numMessages = 20;
+        final int throttleSize = 10;
+        ServerConfiguration conf = new ServerConfiguration() {
+                @Override
+                public int getDefaultMessageWindowSize() {
+                    return throttleSize;
+                }
+            };
+        ByteString topic = ByteString.copyFromUtf8("throttlingRaceTopic");
+        ByteString subscriber = ByteString.copyFromUtf8("throttlingRaceSubscriber");
+
+        PersistenceManager pm = new StubPersistenceManager();
+        FIFODeliveryManager fdm = new FIFODeliveryManager(pm, conf);
+        ExecutorDeliveryEndPoint dep = new ExecutorDeliveryEndPoint(fdm);
+        SubscriptionPreferences prefs = SubscriptionPreferences.newBuilder().build();
+
+        PipelineFilter filter = new PipelineFilter();
+        filter.addLast(new AllToAllTopologyFilter());
+        filter.initialize(conf.getConf());
+        filter.setSubscriptionPreferences(topic, subscriber, prefs);
+
+        CountDownLatch l = new CountDownLatch(numMessages);
+
+        TestCallback firstCallback = null;
+        for (int i = 0; i < numMessages; i++) {
+            Message m = Message.newBuilder().setBody(ByteString.copyFromUtf8(String.valueOf(i))).build();
+            TestCallback cb = new TestCallback(l);
+            if (firstCallback == null) {
+                firstCallback = cb;
+            }
+            pm.persistMessage(new PersistRequest(topic, m, cb, null));
+        }
+        fdm.start();
+        assertTrue("Persistence never finished", l.await(10, TimeUnit.SECONDS));
+        fdm.startServingSubscription(topic, subscriber, prefs, firstCallback.getId(), dep, filter,
+                new Callback<Void>() {
+                     @Override
+                     public void operationFinished(Object ctx, Void result) {
+                     }
+                     @Override
+                     public void operationFailed(Object ctx, PubSubException exception) {
+                         // would not happened
+                     }
+                }, null);
+
+        int count = 30; // wait for 30 seconds maximum
+        while (dep.getNumDelivered() < numMessages) {
+            Thread.sleep(1000);
+            if (count-- == 0) {
+                break;
+            }
+        }
+        assertEquals("Should have delivered " + numMessages, numMessages, dep.getNumDelivered());
+    }
+
 }
